tests/integration/fail/modules_file_not_found.kr
# Test error handling for missing module file
import missing from "nonexistent.kr"
# Expected: Runtime error - Module file not found

